<resources>
    <string name="app_name">JBDWebView</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_mail_us">Mail Us</string>
    <string name="mail_us_message">You can also send E-mail us. we will give you response ASAP.</string>
    <string name="subject_message_for_mail">Write Subject here</string>
    <string name="write_message_for_mail">Write message here</string>
    <string name="choose_email">Choose an Email client :</string>
</resources>