<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/privacy_policy"
            android:title="@string/menu_privacy_policy" />
        <item
            android:id="@+id/nav_terms_conditions"
            android:icon="@drawable/teams_condition"
            android:title="@string/menu_terms_condition" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_mail_us"
            android:icon="@drawable/ic_baseline_mail_outline_24"
            android:title="@string/menu_mail_us" />
    </group>
</menu>