<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jbdinfotech.jbdwebview.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.jbdinfotech.jbdwebview.fragment.PrivacyPolicyFragment"
        android:label="@string/menu_privacy_policy"
        tools:layout="@layout/fragment_privacy_policy" />

    <fragment
        android:id="@+id/nav_terms_conditions"
        android:name="com.jbdinfotech.jbdwebview.fragment.TermsAndConditionFragment"
        android:label="@string/menu_terms_condition"
        tools:layout="@layout/fragment_terms_and_condition" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.jbdinfotech.jbdwebview.fragment.AboutUsFrament"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us_frament" />
    <fragment
        android:id="@+id/nav_mail_us"
        android:name="com.jbdinfotech.jbdwebview.fragment.MailUsFragment"
        android:label="@string/menu_mail_us"
        tools:layout="@layout/fragment_mail_us" />
</navigation>